# python-sdk-patterns

./: .gitignore  README.md  pyproject.toml
examples/: run_basic_proxy.py  run_e2e.py  run_star_model.py  run_star_model_dp.py
flame/proxy/: __init__.py  aggregator_client.py  analyzer_client.py  mapping_methods.py  node_base_client.py  proxy_client.py  proxy_model.py  proxy_model_tester.py
flame/star/: __init__.py  aggregator_client.py  analyzer_client.py  node_base_client.py  star_model.py  star_model_tester.py  test_star_model.py
flame/star/star_localdp/: __init__.py  star_localdp_model.py
flame/templates/: aggregator_generic.py  analyzer_generic.py  main_generic.py
flame/utils/: mock_flame_core.py  mock_message.py  mock_node_config.py  mock_shared_broker.py
patterns/star/: __init__.py  aggregator_client.py  analyzer_client.py  node_base_client.py  star_model.py
patterns/templates/: aggregator_generic.py  analyzer_generic.py  main_generic.py
test/: test_e2e.py  test_multiple_results.py  test_persistent_analyzer_state.py  test_star_pattern.py  test_star_pattern_dp.py
test/data/node1/: synthetic_eucare_1_labeled.csv
test/data/node2/: synthetic_eucare_2.csv  synthetic_eucare_2_labeled.csv
tests/: test_star_model.py
