[project]
name = "python-template-repo"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Röhl", email = "alexander.roehl@uni-tuebingen.de"},
    {name = "David Hieber", email = "david.hieber@uni-tuebingen.de"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
]
license = "Apache-2.0"

[tool.poetry]
packages = [{ include = "project" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
ruff = ">=0.9.0"
pre-commit = ">=4.0.0"
flame = {git = "https://github.com/PrivateAIM/python-sdk.git", branch = "main"}

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
