[tool.poetry]
name = "patterns"
version = "0.1.0"
description = ""
authors = ["Alexander Röhl <alexander.roehl@uni-tuebingen.de>",
    "David Hieber <david.hieber@uni-tuebingen.de>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{ include = "patterns" }]

[tool.poetry.dependencies]
python = "^3.9"
flamesdk = {git = "https://github.com/PrivateAIM/python-sdk.git", branch = "main"}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
ruff = ">=0.9.0"
pre-commit = ">=4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
