[tool.poetry]
name = "flame"
version = "0.4.1"
description = ""
authors = ["Alexander Röhl <alexander.roehl@uni-tuebingen.de>", "David Hieber <david.hieber@uni-tuebingen.de>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{ include = "flame" }]

[tool.poetry.dependencies]
python = "^3.9"
flamesdk = {git = "https://github.com/PrivateAIM/python-sdk.git", tag = "0.3.1" }

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
ruff = ">=0.9.0"
pre-commit = ">=4.0.0"
opendp = ">=0.12.1,<0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
